# VITOSim

./: CMakeLists.txt  VITO.cc  field1Axial.txt  field1Radial.txt  field2Axial.txt  field2Radial.txt  vis.mac
include/: Anisotropy.hh  DetectorConstruction.hh  EventAction.hh  Exception.hh  OutputRoot.hh  PrimaryGeneratorAction.hh  SampleHolder1.hh  SampleHolder2.hh  Scintillator.hh  SteppingAction.hh  VITOMagneticField.hh
src/: Anisotropy.cc  DetectorConstruction.cc  EventAction.cc  OutputRoot.cc  PrimaryGeneratorAction.cc  RunAction.cc  SampleHolder1.cc  SampleHolder2.cc  Scintillator.cc  SteppingAction.cc  VITOMagneticField.cc
stl/: Rear-10.stl  Rear-12.stl  Rear-2h.stl  Rear-4h.stl  Rear-6h.stl  Rear-8h.stl  all.stl  alumin.stl  scint-FrontDet.stl  scintil.stl
stl/sample_holder/1sample_holder/: 1sample_holder_top.stl  mica.stl
stl/sample_holder/2sample_holder/: 2sample_holder_bottom.stl  2sample_holder_top.stl  crystal.stl
